fix(components): [drawer] A scrollbar appears when opened

--- a/packages/theme-chalk/src/drawer.scss
+++ b/packages/theme-chalk/src/drawer.scss
@@ -83,7 +83,7 @@ $directions: rtl, ltr, ttb, btt;
 
 .#{$namespace}-drawer-splitter {
   $bar: #{$namespace}-splitter-bar;
-
+  $panel: #{$namespace}-splitter-panel;
   > .#{$bar} {
     .#{$bar}__disable {
       display: none;
@@ -102,6 +102,9 @@ $directions: rtl, ltr, ttb, btt;
         background-color: transparent;
       }
     }
+  }
+  > .#{$panel} {
+    overflow: hidden;
   }
 }
 
